--- a/styles.css
+++ b/styles.css
@@ -769,10 +769,23 @@ input::placeholder {
 
 /* subtítulo */
 .subtitulo {
-    margin-top: 6px;
-    font-size: 14px;
-    color: #8b949e;
+  text-align: center;
+  font-size: 15px;
+  font-weight: 500;
+  letter-spacing: 0.3px;
+  color: #ffffff;
 }
+
+.destaque-verde {
+  color: #48C337;
+  font-weight: 600;
+}
+
+.destaque-branco {
+  color: #ffffff;
+  font-weight: 600;
+}
+
 
 /* button de div minha meta meus deposito calculadora */
 /* ---------------------------
